--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header" class="wrapper">
         <div class="container">
                 <img src="bahan/logoku.png" alt="">
-            <div class="menu">
+             <div class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Abaut</a></li>
                 <li><a href="#">Conract</a></li>
@@ -23,16 +23,17 @@
         <div class="container display">
             <div class="sidebar">
                     <h2>Terbaru</h2>
-                    <li><a href="artikel/info1.html">Olahraga Di Tengah Pandemi</a></li>
-                    <li><a href="artikel/info2.html">Tempat Wisata Alam Pantai</a></li>
+                    <li><a href="#">Olahraga Di Tengah Pandemi</a></li>
+                    <li><a href="#">Tempat Wisata Alam Pantai</a></li>
                     <h2 style=" padding-top: 170px;">Multimedia</h2>
-                    <li><a href="artikel/info3.html">Video</a></li>
-                    <li><a href="artikel/info4.html">Youtube</a></li>   
-                    <li><a href="artikel/info5.html">Audio</a></li>
-                    <li><a href="artikel/info6.html">Pdf</a></li>                    
+                    <li><a href="#">Video</a></li>
+                    <li><a href="#">Youtube</a></li>   
+                    <li><a href="#">Audio</a></li>
+                    <li><a href="#">Pdf</a></li>                    
             </div>
             <div class="content">
                 <div class="con1">
+                    <!-- bagian artikel -->
                     <div class="blog-content">
                         <div class="image-box">
                             <img src="bahan/1.jpg" alt="">
@@ -52,19 +53,46 @@
                                 <h2>Tempat Wisata Alam Pantai</h2>
                             </div>
                         </div>
-                        
                         <div class="text-box">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officia ab delectus beatae accusantium facere debitis tempore, praesentium magni sint ipsum tenetur doloremque in explicabo a consequatur modi quo eius.</p>
                             <a href="artikel/info2.html">Read more</a>
                         </div>
                     </div>
                     <div class="clear"></div>
+            </div>
+            <!-- bagin video -->
+            <div class="con2">
+                <div class="text_B">Video</div>
+                    <video  controls >
+                        <source src="bahan/SPIDER.mp4" type="video/mp4">
+                    </video>
+                <div class="text_B">Youtube</div>
+                <object data="https://www.youtube.com/embed/8YjFbMbfXaQ">
+                </object>
+            </div>
+            <div class="con3">
+                <!-- bagian artikel -->
+                <div class="box-o">
+                    <div class="text_C">
+                        Audio
+                    </div>
+                    <div class="img-o">
+                        <img src="bahan/jastin.jpg" alt="">
+                    </div>
+                    <audio controls>
+                        <source src="bahan/jastin.mp3" type="audio/mp3">
+                    </audio>
                 </div>
-                <div class="con2">
-
-                </div>
-                <div class="con1">
-
+                <div class="box-o">
+                    <div class="text_C">
+                        Audio
+                    </div>
+                    <div class="img-o">
+                        <img src="bahan/jastin.jpg" alt="">
+                    </div>
+                    <audio controls>
+                        <source src="bahan/jastin.mp3" type="audio/mp3">
+                    </audio>
                 </div>
             </div>
         </div>
