update tugas disply audio video

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
     </div>
     <div id="conten" class="wrapper">
         <div class="container display">
+            <div class="sidebar2"></div>
             <div class="sidebar">
                     <h2>Terbaru</h2>
-                    <li><a href="#">Olahraga Di Tengah Pandemi</a></li>
-                    <li><a href="#">Tempat Wisata Alam Pantai</a></li>
+                    <li><a href="artikel/info1.html">Olahraga Di Tengah Pandemi</a></li>
+                    <li><a href="artikel/info2.html">Tempat Wisata Alam Pantai</a></li>
                     <h2 style=" padding-top: 170px;">Multimedia</h2>
-                    <li><a href="#">Video</a></li>
-                    <li><a href="#">Youtube</a></li>   
-                    <li><a href="#">Audio</a></li>
-                    <li><a href="#">Pdf</a></li>                    
+                    <li><a href="artikel/video.html">Video</a></li>
+                    <li><a href="artikel/youtube.html">Youtube</a></li>   
+                    <li><a href="artikel/audio.html">Audio</a></li>
+                    <li><a href="artikel/pdf.html">Pdf</a></li>                    
             </div>
             <div class="content">
                 <div class="con1">
@@ -85,14 +86,14 @@
                 </div>
                 <div class="box-o">
                     <div class="text_C">
-                        Audio
+                        PDF
                     </div>
-                    <div class="img-o">
-                        <img src="bahan/jastin.jpg" alt="">
+                    <div class="img-p">
+                        <img src="bahan/home.jpg" alt="">
+                        <div class="overlay">
+                            <a href="artikel/pdf.html">PANDEMI</a> 
+                        </div>
                     </div>
-                    <audio controls>
-                        <source src="bahan/jastin.mp3" type="audio/mp3">
-                    </audio>
                 </div>
             </div>
         </div>
